--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <header>
         <h1>Welcome to my Phone Hunter</h1>
     </header>
+    <main class="container">
+        <section>
+            <div class="mb-3 w-50 d-flex">
+                <input type="email" class="form-control" id="search-field" placeholder="Search Your Phone">
+                <button id="btn-search" class="btn btn-primary ms-2">Search</button>
+              </div>
+        </section>
+        <!-- display search phones -->
+        <section>
+            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+                
+              </div>
+        </section>
+    </main>
     <!-- bootstrap script link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
