--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
                 
               </div>
+              <div id="no-found-message" class="d-none mt-4">
+                <h3 class="text-warning">No Phone Found. Please Try A New Search.</h3>
+              </div>
+              <div id="show-all" class="text-center my-4 d-none">
+                <button id="btn-show-all" class="btn btn-primary">Show All</button>
+              </div>
+        </section>
+        <!-- loader -->
+        <section id="loader" class="d-none">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border text-success" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
         </section>
     </main>
     <!-- bootstrap script link -->
