--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <!-- bootstrap cdn link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to my Phone Hunter</h1>
@@ -17,31 +19,53 @@
             <div class="mb-3 w-50 d-flex">
                 <input type="email" class="form-control" id="search-field" placeholder="Search Your Phone">
                 <button id="btn-search" class="btn btn-primary ms-2">Search</button>
-              </div>
+            </div>
         </section>
         <!-- display search phones -->
         <section>
             <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
-                
-              </div>
-              <div id="no-found-message" class="d-none mt-4">
+
+            </div>
+            <div id="no-found-message" class="d-none mt-4">
                 <h3 class="text-warning">No Phone Found. Please Try A New Search.</h3>
-              </div>
-              <div id="show-all" class="text-center my-4 d-none">
+            </div>
+            <div id="show-all" class="text-center my-4 d-none">
                 <button id="btn-show-all" class="btn btn-primary">Show All</button>
-              </div>
+            </div>
         </section>
         <!-- loader -->
         <section id="loader" class="d-none">
             <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
                 <div class="spinner-border text-success" role="status">
-                  <span class="visually-hidden">Loading...</span>
+                    <span class="visually-hidden">Loading...</span>
                 </div>
-              </div>
+            </div>
+        </section>
+        <!-- modal contents -->
+        <section>            
+            <!-- Modal -->
+            <div class="modal fade" id="phoneDetailModal" tabindex="-1" aria-labelledby="phoneDetailModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="phoneDetailModalLabel"></h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div id="phone-details" class="modal-body">
+                            
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- bootstrap script link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
